# mcp-development-workspace

./: .gitignore
mcp-agent/: .gitignore  CONTRIBUTING.md  LLMS.txt  Makefile  README.md  pyproject.toml
mcp-agent/.github/workflows/: checks.yml
mcp-agent/docs/: README.md  configuration.mdx  docs.json  index.mdx  installation.mdx  quickstart.mdx
mcp-agent/docs/advanced/: temporal.mdx
mcp-agent/docs/codeboarding/: agent-workflow-framework.mdx  core-orchestration-execution.mdx  intent-interaction-management.mdx  llm-external-tooling.mdx  mcp-api-gateway.mdx  overview.mdx
mcp-agent/docs/concepts/: agents.mdx  augmented-llms.mdx  elicitation.mdx  mcp-primitives.mdx  mcp-servers.mdx
mcp-agent/docs/workflows/: evaluator-optimizer.mdx  intent-classifier.mdx  orchestrator.mdx  overview.mdx  parallel.mdx  router.mdx  swarm.mdx
mcp-agent/examples/basic/agent_factory/: README.md  agents.yaml  auto_loaded_subagents.py  load_and_route.py  mcp_agent.config.yaml  mcp_agent.secrets.yaml.example  orchestrator_demo.py  parallel_demo.py
mcp-agent/examples/basic/functions/: README.md  main.py  mcp_agent.config.yaml  requirements.txt
mcp-agent/examples/crewai/: .env.example  README.md  main.py  mcp_agent.secrets.yaml.example  requirements.txt
mcp-agent/examples/langchain/: README.md  main.py  mcp_agent.config.yaml  mcp_agent.secrets.yaml.example  requirements.txt
mcp-agent/examples/mcp_agent_server/: README.md
mcp-agent/examples/multithread/: main.py  mcp_agent.config.yaml  mcp_agent.secrets.yaml.example  requirements.txt  word_count.py
mcp-agent/examples/temporal/: README.md  basic.py  evaluator_optimizer.py  graded_report.md  interactive.py  main.py  mcp_agent.config.yaml  orchestrator.py  parallel.py  requirements.txt  router.py  run_worker.py  short_story.md
mcp-agent/schema/: mcp-agent.config.schema.json
mcp-agent/scripts/: event_replay.py  event_summary.py  event_viewer.py  gen_llm_benchmarks.py  log_trimmer.py  promptify.py
mcp-agent/src/mcp_agent/: app.py  config.py
mcp-agent/tests/: test_app.py  test_tracing_isolation.py
mcp-agent/tests/agents/: conftest.py  test_agent.py  test_agent_tasks_isolation.py
mcp-agent/tests/cli/: __init__.py  conftest.py  test_api_key_rename.py  test_deploy_validation.py
mcp-agent/tests/executor/: test_workflow.py  test_workflow_signal.py
mcp-agent/tests/integration/: test_multithread_smoke.py
mcp-agent/tests/logging/: test_upstream_logging.py
mcp-agent/tests/mcp/: test_connection_manager_lifecycle.py  test_mcp_aggregator.py  test_mcp_connection_manager.py
mcp-agent/tests/server/: test_app_server.py  test_app_server_workflow_schema.py  test_tool_decorators.py
mcp-agent/tests/tools/: test_crewai_tool.py  test_langchain_tool.py
mcp-agent/tests/tracing/: test_token_counter.py  test_token_counter_concurrency.py  test_token_integration_convenience.py
mcp-agent/tests/utils/: test_config_env_aliases.py  test_config_preload.py  test_content_utils.py  test_mime_utils.py  test_multipart_converter_anthropic.py  test_multipart_converter_azure.py  test_multipart_converter_bedrock.py  test_multipart_converter_google.py  test_multipart_converter_openai.py  test_prompt_message_multipart.py  test_pydantic_type_serializer.py  test_resource_utils.py
mcp-agent/tests/workflows/: test_agentspec_loader.py
(+519 files in other folders)
