[project]
name = "mcp-marketing_assistant_agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp-agent>=0.1.7",
    "fastmcp>=0.1.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "aiohttp>=3.8.0",
    "textstat>=0.7.0",
    "langdetect>=1.0.9",
    "markitdown>=0.1.2",
]
